Create connection to Database
In the resources was added sql script to create database. Added mysql and spring-jpa libraries to maven. Upgraded Transaction class to support database table conversion. And also add service and repository to work with database.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 server.port=8092
-lyndexter.bank-token = ${BANK_TOKEN}
+lyndexter.bank-token=${BANK_TOKEN}
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost}:${DATABASE_PORT:3306\
+  }/monobank_client_db
+spring.datasource.username=${DATABASE_USER:seller}
+spring.datasource.password=${DATABASE_PASSWORD:}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
